# rust-price-control

./: Cargo.toml  flake.nix  pricecontrol.toml  readme.md
src/: actions.rs  config.rs  device_model.rs  devices.rs  functions.rs  main.rs  price.rs  structs.rs  telldus.rs  webserver.rs  webui.rs
static/: index.html  listdevices.htm  pricecontrol.js
