[package]
name = "rPC"
version = "0.1.0-beta.1"
edition = "2021"
authors = ["Conny Holm"]
description = "Control devices by current electricity spot price. Run custom scripts or trigger Telldus devices."

[dependencies]
chrono = "0.4.41"
# clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12.20", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
# signal = "0.7.0"
# signal-hook = "0.3.18"
# tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
log = "0.4"
env_logger = "0.11"
tempfile = "3.23.0"
anyhow = "1.0.100"
tiny_http = "0.12.0"
dirs = "6.0.0"
