[package]
name = "rPC"
version = "0.1.0-beta.3"
edition = "2021"
authors = ["Conny Holm"]
description = "Control devices by current electricity spot price. Run custom scripts or trigger Telldus devices."

[dependencies]
reqwest = { version = "0.12.20", default-features = false,  features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.8.23"
log = "0.4"
env_logger = "0.11"
tempfile = "3.23.0"
anyhow = "1.0.100"
tiny_http = "0.12.0"
dirs = "6.0.0"
urlencoding = "2"
time = { version = "0.3", features = ["local-offset", "parsing"] }
